--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
     gtag('js', new Date());
     gtag('config', 'G-DHE1PH854B');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4046615879480582"
+     crossorigin="anonymous"></script>  
 </head>
 <body>
   <article class="markdown-body">
