--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,14 @@
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4046615879480582"
      crossorigin="anonymous"></script>  
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 <body>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4046615879480582">
+</amp-auto-ads>
   <article class="markdown-body">
     {{ content }}
   </article>
